# trajectory_palnning_src

hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: fk_publisher_node.cpp  rviz_control_interface.cpp  scene_initializer.cpp  simple_planning.cpp
lrmate_200id-main/models/camera_frame/meshes/: camera_frame.stl
lrmate_200id-main/urdf/: LRMate-200iD_convex.urdf
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/action/: TaskOne.action
robot_interfaces/msg/: ArmAttitude.msg  RobotCommand.msg  RobotInfo.msg  TaskChange.msg
robot_interfaces/srv/: StartEndPose.srv
